logs/smpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SMPy-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/evaluation'...
Compiling './lib/python3.5/site-packages/evaluation/evaluation.py'...
***   File "./lib/python3.5/site-packages/evaluation/evaluation.py", line 111
    print "entropy bounds: " , hi, lo
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/evaluation/loadHITs.py'...
***   File "./lib/python3.5/site-packages/evaluation/loadHITs.py", line 37
    print ans
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/evaluation/phonology.py'...
***   File "./lib/python3.5/site-packages/evaluation/phonology.py", line 108
    print hitDir, hitDir.endswith("3")
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytidylib-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/surveyman'...
Listing './lib/python3.5/site-packages/surveyman/examples'...
Listing './lib/python3.5/site-packages/surveyman/survey'...
Compiling './lib/python3.5/site-packages/surveyman/survey/options.py'...
***   File "./lib/python3.5/site-packages/surveyman/survey/options.py", line 77
    print errors
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/surveyman/test'...
Compiling './lib/python3.5/site-packages/surveyman/test/SurveyTests.py'...
***   File "./lib/python3.5/site-packages/surveyman/test/SurveyTests.py", line 89
    print self.html_opt.jsonize()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tidylib'...
Listing './share'...
Listing './share/python-wheels'...
